Fix footer on mobile

--- a/loopstudios-landing-page/style.css
+++ b/loopstudios-landing-page/style.css
@@ -303,6 +303,10 @@ footer .copyright-text {
     content: url('./images/mobile/image-fisheye.jpg');
 }
 
+.footer-left {
+    height: 500px;
+}
+
 @media (min-width:1000px) {
     .header-image {
         width: 100%;
@@ -469,7 +473,7 @@ footer .copyright-text {
     }
 
     .footer-left {
-		height: 500px;
+        height: 100px;
         max-width: 30%;
         display: flex;
         flex-direction: column;
